--- a/osa9/patientor/patientor-frontend/package.json
+++ b/osa9/patientor/patientor-frontend/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "assert-never": "^1.2.1",
     "axios": "^0.19.2",
     "formik": "^2.1.5",
     "react": "^16.13.1",
