--- a/osa9/patientor/patientor-frontend/package.json
+++ b/osa9/patientor/patientor-frontend/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@types/yup": "^0.29.8",
     "assert-never": "^1.2.1",
     "axios": "^0.19.2",
     "formik": "^2.1.5",
@@ -10,7 +11,8 @@
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.2.0",
     "semantic-ui-css": "^2.4.1",
-    "semantic-ui-react": "^0.88.2"
+    "semantic-ui-react": "^0.88.2",
+    "yup": "^0.29.3"
   },
   "devDependencies": {
     "@types/axios": "^0.14.0",
