Tietojen validointi entry tehty ja osa9 valmis

--- a/osa9/patientor/patientor-frontend/package.json
+++ b/osa9/patientor/patientor-frontend/package.json
@@ -6,7 +6,10 @@
     "@types/yup": "^0.29.8",
     "assert-never": "^1.2.1",
     "axios": "^0.19.2",
+    "eslint-config-prettier": "^6.12.0",
+    "eslint-plugin-prettier": "^3.1.4",
     "formik": "^2.1.5",
+    "prettier": "^2.1.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.2.0",
@@ -21,10 +24,12 @@
     "@types/react": "^16.9.49",
     "@types/react-dom": "16.9.3",
     "@types/react-router-dom": "^5.1.5",
-    "@typescript-eslint/eslint-plugin": "^2.34.0",
-    "@typescript-eslint/parser": "^2.34.0",
+    "@typescript-eslint/eslint-plugin": "^4.4.1",
+    "@typescript-eslint/parser": "^4.4.1",
+    "eslint": "^7.11.0",
     "eslint-config-react": "^1.1.7",
-    "react-scripts": "3.3.0",
+    "eslint-plugin-react": "^7.21.4",
+    "react-scripts": "^3.4.3",
     "typescript": "^3.9.7"
   },
   "scripts": {
@@ -32,7 +37,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "lint": "eslint './src/**/*.{ts,tsx}'",
+    "lint": "eslint ./src/",
     "lint:fix": "eslint './src/**/*.{ts,tsx}' --fix"
   },
   "browserslist": {
